--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Work Day Scheduler</title>
   </head>
@@ -29,10 +33,31 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <!-- Timeblocks go here -->
+      <!-- <ul id="schedule-list" class="list-group"> -->
+        <div class="input-group">
+          <div class="input-group-prepend">
+            <span class="input-group-text">9:00 am</span>
+          </div>
+          <textarea class="form-control" aria-label="With textarea"></textarea>
+          <div class="input-group-append">
+            <span class="input-group-text" id="basic-addon2">@example.com</span>
+          </div>
+        </div>
+        <div class="input-group">
+          <div class="input-group-prepend">
+            <span class="input-group-text">10:00 am</span>
+          </div>
+          <textarea class="form-control" aria-label="With textarea"></textarea>
+          <div class="input-group-append">
+            <i class="input-group-text bi bi-save" id="basic-addon2"></i>
+          </div>
+        </div>
+      <!-- </ul> -->
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   </body>
 </html>
+
+<!-- <time | content | save button> -->
