--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    <link 
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
     />
     <link
       rel="stylesheet"
@@ -22,7 +23,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="assets/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -33,30 +34,13 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <!-- <ul id="schedule-list" class="list-group"> -->
-        <div class="input-group">
-          <div class="input-group-prepend">
-            <span class="input-group-text">9:00 am</span>
-          </div>
-          <textarea class="form-control" aria-label="With textarea"></textarea>
-          <div class="input-group-append">
-            <span class="input-group-text" id="basic-addon2">@example.com</span>
-          </div>
-        </div>
-        <div class="input-group">
-          <div class="input-group-prepend">
-            <span class="input-group-text">10:00 am</span>
-          </div>
-          <textarea class="form-control" aria-label="With textarea"></textarea>
-          <div class="input-group-append">
-            <i class="input-group-text bi bi-save" id="basic-addon2"></i>
-          </div>
-        </div>
-      <!-- </ul> -->
+      <div class="schedule-list" id="scheduleList">
+      </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script type="module" src="./assets/js/planner.js"></script>
   </body>
 </html>
 
